<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Radio</string>
    <string name="traffic">Traffic</string>
    <string name="as">AS</string>
    <string name="band">BAND</string>
    <string name="dx">DX</string>
    <string name="loc">LOC</string>
    <string name="st">ST</string>
    <string name="tp">TP</string>
    <string name="af">AF</string>
    <string name="ta">TA</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="p3">P3</string>
    <string name="p4">P4</string>
    <string name="p5">P5</string>
    <string name="p6">P6</string>
    <string name="p7">P7</string>
    <string name="p8">P8</string>
    <string name="p9">P9</string>
    <string name="p10">P10</string>
    <string name="p11">P11</string>
    <string name="p12">P12</string>
    <string name="p13">P13</string>
    <string name="p14">P14</string>
    <string name="p15">P15</string>
    <string name="p16">P16</string>
    <string name="p17">P17</string>
    <string name="p18">P18</string>
    <string name="am">AM</string>
    <string name="fm">FM</string>
    <string name="fm1">FM1</string>
    <string name="fm2">FM2</string>
    <string name="fm3">FM3</string>
    <string name="am1">AM1</string>
    <string name="am2">AM2</string>
    <string name="pty">PTY</string>
    <string name="pty00">None</string>
    <string name="pty01">News</string>
    <string name="pty02">Affairs</string>
    <string name="pty03">Info</string>
    <string name="pty04">Sport</string>
    <string name="pty05">Educate</string>
    <string name="pty06">Drama</string>
    <string name="pty07">Culture</string>
    <string name="pty08">Science</string>
    <string name="pty09">Varied</string>
    <string name="pty10">Pop M</string>
    <string name="pty11">Rock M</string>
    <string name="pty12">Easy M</string>
    <string name="pty13">Light M</string>
    <string name="pty14">Classics</string>
    <string name="pty15">Other M</string>
    <string name="pty16">Weather</string>
    <string name="pty17">Finance</string>
    <string name="pty18">Children</string>
    <string name="pty19">Social</string>
    <string name="pty20">Religion</string>
    <string name="pty21">Phone In</string>
    <string name="pty22">Travel</string>
    <string name="pty23">Leisure</string>
    <string name="pty24">Jazz</string>
    <string name="pty25">Country</string>
    <string name="pty26">Nation M</string>
    <string name="pty27">Oldies</string>
    <string name="pty28">Folk M</string>
    <string name="pty29">Document</string>
    <string name="pty30">Test</string>
    <string name="pty31">Alarm !</string>
</resources>